deployment/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mcp-linkedin
spec:
  to:
    kind: Service
    name: mcp-linkedin
  port:
    targetPort: 8080
  tls:
    termination: edge
